feat(visits): converge visit requirements
